fixes main buttons on mobile

--- a/source/sass/_custom.scss
+++ b/source/sass/_custom.scss
@@ -181,10 +181,25 @@ $theme-color: #04ccb7;
     box-shadow: 2px 2px 10px rgba(black, .1);
   }
   &__index {
+    // @media only screen 
+    // and (max-device-width: 1200px)
+    // and (-webkit-min-device-pixel-ratio: 2) {
+    //     display: none;
+    // }
+  }
+  .nodisplay { 
     @media only screen 
     and (max-device-width: 1200px)
     and (-webkit-min-device-pixel-ratio: 2) {
         display: none;
+    }
+  }
+
+  .yesdisplay { 
+    @media only screen 
+    and (max-device-width: 1200px)
+    and (-webkit-min-device-pixel-ratio: 2) {
+        width: 75%;
     }
   }
 }
